<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Activity.LoginActivity">

        <ImageView
            android:id="@+id/poster"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:src="@drawable/login_background"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView18"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="28dp"
            android:background="@drawable/bg_round_corner_15"
            android:backgroundTint="#F23A3A3A"
            android:foreground="?attr/selectableItemBackgroundBorderless"
            android:paddingStart="15dp"
            android:paddingTop="5dp"
            android:paddingEnd="17dp"
            android:paddingBottom="5dp"
            android:text="@string/skip"
            android:textColor="@color/Tyrolean"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_round_corner_15"
            android:backgroundTint="#F5979696"
            android:foreground="?attr/selectableItemBackgroundBorderless"
            android:paddingStart="25dp"
            android:layout_marginStart="28dp"
            android:paddingTop="5dp"
            android:drawableStart="@drawable/ic_translate"
            app:drawableTint="@color/white"
            android:paddingEnd="25dp"
            android:paddingBottom="5dp"
            android:textColor="@color/Tyrolean"
            app:layout_constraintBottom_toBottomOf="@+id/textView18"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textView18" />

        <TextView
            android:id="@+id/averageRating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/primary_bold"
            android:gravity="center"
            android:padding="25dp"

            android:text="@string/india_1"
            android:textColor="@color/black"
            android:textSize="28sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/poster" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_signup"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/averageRating"
            app:layout_constraintStart_toStartOf="@+id/averageRating"
            app:layout_constraintTop_toBottomOf="@+id/averageRating" />

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="15dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2">

            <com.hbb20.CountryCodePicker
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@drawable/bg_round_corner_5"
                android:elevation="2dp"
                app:ccp_showNameCode="false"
                app:ccp_showPhoneCode="false" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:background="@drawable/bg_round_corner_5"
                android:elevation="2dp"
                android:gravity="center"
                android:padding="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/default_code"
                    android:textColor="@color/black"
                    android:layout_marginEnd="5dp"
                    android:textSize="16sp" />

                <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="2dp"
                    android:layout_weight="1"
                    android:layout_marginStart="10dp"
                    android:background="@android:color/transparent"
                    android:hint="@string/enter_phone"
                    android:inputType="number"
                    android:maxLength="10"
                    android:textColor="@color/black" />
            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/btnLogIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:text="@string/_continue"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
            tools:layout_editor_absoluteX="16dp" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/or"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/linearLayout2"
            app:layout_constraintStart_toStartOf="@+id/linearLayout2"
            app:layout_constraintTop_toBottomOf="@+id/btnLogIn" />

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3">

            <ImageView
                android:id="@+id/ivGoogleLogin"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_margin="10dp"
                android:background="@drawable/bg_circle"
                android:padding="10dp"
                android:src="@drawable/ic_google" />

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_margin="10dp"
                android:background="@drawable/bg_circle"
                android:padding="10dp"
                android:src="@drawable/ic_more" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50dp"
            android:gravity="center"
            android:padding="15dp"
            android:text="@string/agree_with_terms"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>